Fixing image size + collapsing navbar when clicked on one of its item

--- a/myapp/src/app/components/invitation/invitation.component.css
+++ b/myapp/src/app/components/invitation/invitation.component.css
@@ -1,6 +1,6 @@
 img{
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 500px;
     margin: 0 5px 0 5px;
     border: 0.5px solid black;
 }
